--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
+  <button id="reset" type="button">Reset Canvas</button>
+  
   <div id="container"></div>
 <script src="etchasketch.js"></script>
+
 </body>
 </html>
